[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "media-pipelines"
version = "0.1.0"
description = "Automated audio and video media enrichment pipelines."
authors = [{ name = "Andres Gonzalez Franco" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34.0",
    "requests>=2.31.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "moto[s3,sts,stepfunctions]>=5.0.0",
    "localstack-client>=2.4",
    "ruff>=0.5.0",
    "black>=24.3.0",
    "types-requests>=2.31.0",
    "pre-commit>=3.0.0",
]
audio = [
    "pydub>=0.25.1",
    "librosa>=0.10.1",
]
dashboard = [
    "streamlit>=1.37.0",
]

[tool.setuptools]
packages = [
    "audio_pipeline",
    "video_pipeline",
    "shared",
    "infrastructure",
    "dashboard",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
]
extend-ignore = [
    "E501",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
addopts = "-q"
python_files = "test_*.py"
testpaths = ["tests"]
norecursedirs = ["scripts", "deploy", ".venv", "venv", "__pycache__"]
